tema curs 13 + curs 14

--- a/test.properties
+++ b/test.properties
@@ -1,5 +1,6 @@
-#email
-#Mon Jul 11 10:59:48 EEST 2022
-country=UK
+#am salvat fisierul properties
+#Thu Jul 14 15:33:27 EEST 2022
+country=RO
+email=test@email.com
 pass=pass123
 user=testUser
